--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "preconditions": "^1.0.8",
     "sjcl": "1.0.3",
     "superagent": "^3.4.1",
-	"bitcore-lib-eth": "git://github.com/dasenlinCode/bitcore-lib.git#<test>",
+	"bitcore-lib-eth": "https://github.com/dasenlinCode/bitcore-lib.git#test",
   },
   "devDependencies": {
     "bitcore-wallet-service": "2.3.0",
